--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ description = "BMA400 Bosch Accelerometer CircuitPython Driver"
 version = "0.0.0+auto.0"
 readme = "README.rst"
 authors = [
-    {name = "Jose D. Montoya", email = "jlib@mailmeto.mozmail.com"}
+    {name = "JDM", email = "xx@mailmeto.mozmail.com"}
 ]
 urls = {Homepage = "https://github.com/jposada202020/CircuitPython_BMA400"}
 keywords = [
